assets/linker/styles/custom.less
/* ... */
#virtual-start {
  border-top: 7px solid @blush;
}

#cafe-front-1 {
  background: url("../../images/front2.jpg") bottom center no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
        src='../../images/front2.jpg',
        sizingMethod='scale');

  /* border-right: 7px solid @blush; */
  border-left: 7px solid @ground;
}

#cafe-front-2 {
  background: url("../../images/yogurt.jpg") bottom center no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
        src='../../images/yogurt.jpg',
        sizingMethod='scale');

  border-right: 7px solid @ground;
  border-left: 7px solid @ground;
}

#cafe-front-3 {
  background: url("../../images/employee.jpg") top center no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
        src='i../../images/employee.jpg',
        sizingMethod='scale');

  width: 34%;
  border-right: 7px solid @ground;
  /*border-left: 7px solid @blush;*/
}

#catering-1 {
  background: url("../../images/brownies.jpg") bottom center no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
        src='../../images/brownies.jpg',
        sizingMethod='scale');

  /*border-right: 7px solid @blush;*/
  border-left: 7px solid @ground;
}

#catering-2 {
  background: url("../../images/parm.jpg") bottom center no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
        src='../../images/parm.jpg',
        sizingMethod='scale');

  border-right: 7px solid @ground;
  border-left: 7px solid @ground;
}

#catering-3 {
  background: url("../../images/salad.jpg") top center no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
        src='../../images/salad.jpg',
        sizingMethod='scale');

  width: 34%;
  border-right: 7px solid @ground;
  /*border-left: 7px solid @blush;*/
}


.three-picture {
  width: 33%;
  height: 300px;
  float: left;
}

#welcome {
  width: 100%;
  height: 500px;
  padding-top: 30px;
  padding-bottom: 30px;
  box-shadow: 5px 2px 10px 10px #313131;
  z-index: 0;
}

#catering-how-it-works {
  width: 100%;
  min-height: 400px;
  padding-top: 40px;
  padding-bottom: 20px;
  z-index: 0;
  border-top: 7px solid @ground;
  border-bottom: 7px solid @blush;
}

/*#catering-reminder {
  width: 100%;
  min-height: 200px;
  padding-top: 40px;
  padding-bottom: 20px;
  z-index: 0;
}*/

#catering-reviews {
  border-top: 7px solid @blush;
  padding-top: 40px;
}

#reviews {
  width: 100%;
  height: 650px;
padding-top: 30px;
padding-bottom: 30px;
background-color: #fff;
}

#feedback {
  width: 100%;
  height: 500px;
  padding-top: 30px;
  padding-bottom: 30px;
}

#express-section1 {
  width: 100%;
  min-height: 250px;
  z-index: 0;
  background: url("../../images/bgs/coffee_cup.jpg") no-repeat fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
        src='../../images/bgs/coffee_cup.jpg',
        sizingMethod='scale');

  border-bottom: 7px solid @ground;
}

#section-2 {
  width: 100%;
  height: 400px;
}

#main-hours-section {
  padding-top: 30px;
  padding-bottom: 30px;
  position: relative;
  width: 100%;
  min-height: 450px;
  box-shadow: 5px 1px 10px #313131;
  z-index: 0;
  border-top: 7px solid @blush;
  border-bottom: 7px solid @blush;
}

#main-hours-sun {
  position: absolute;
  left: -125px;
  top: 1px;
  z-index:-1;
  height: 250px;
  width: 250px;
}

#three-picture-section{
  height: 314px;
  border-top: 7px solid @ground;
  border-bottom: 7px solid @ground;
}

#main-history-section {
  padding-top: 30px;
  padding-bottom: 30px;
  width: 100%;
  min-height: 500px;
  z-index: 0;
   border-top: 7px solid @blush;
}

#header-section {
  width:100%;
  height: 65px;
  background-color: @blush;
  z-index: 25;
  padding-top: 5px;
  border-bottom: 7px solid @ground;
  box-shadow: 0px 1px 8px #313131;
}

#circle-logo {
  margin-top: -25px;
}

.replacement-button {
    display: none!important;
}

@media screen and (max-width: 1200px) {
 .double-divider::before, .double-divider::after {
    width: 20%;
  }
}

@media screen and (max-width: 1000px) {
  .double-divider::before, .double-divider::after {
    width: 25%;
  }

  .spacer{
    display: none;
  }

  .break {
    display: block!important;
  }

}

@media screen and (max-width: 767px) {
  .removable-button {
    display: none!important;
  }

  .replacement-button {
    display: block!important;
  }
}

@media screen and (max-width: 480px) {
  .double-divider::before, .double-divider::after {
    width: 10%;
  }

  .section-desc{
    padding-left: 20px;
    padding-right: 20px;
  }

  .menu-item .item-price {
    float: none;
    margin-bottom: 15px!important;
  }

  .menu-item .spacer {
    display: block!important;
    line-height: 0.05em;
  }

}
@media screen and (max-width: 620px) {
  #circle-logo {
    margin-top: -20px;
  }

  .navbar-item {
    font-family: 'bebas';
    font-size: 1.1em;
    color: @chili;
    text-decoration: none;
  }

  .navbar-item:hover {
    color: @ground;
    text-decoration: none;
  }

  #logo {
    width: 100%;
    height: 100%;
  }

  .footer-item {
    padding-left: 45px;
  }

  .footer-header {
    margin-left: 45px !important;
  }

  .item {
    width: 98%!important;
  }

  .removable {
    display:none !important;
  }
}
/* ... */

